Multi-accounts supports - fix select dropdown z-index. improve styles for account management components

--- a/src/popup/components/AccountsManagement/style.scss
+++ b/src/popup/components/AccountsManagement/style.scss
@@ -1,30 +1,50 @@
 @import '../../styles/colors';
 
+.accounts-management__page,
+.sliding-panel__content {
+	.accounts-management {
+		&__content-title {
+			background-color: #fff;
+			box-shadow: 0 10px 15px 10px #fff;
+			padding: 20px 0 0;
+			margin: 0 0 30px;
+			position: sticky;
+			top: 0;
+			z-index: 1;
+		}
+
+		&__content-buttons {
+			background-color: #fff;
+			box-shadow: 0 -10px 15px 10px #fff;
+			position: sticky;
+			margin: 30px 0 0;
+			padding: 0 0 20px;
+			bottom: 0;
+			z-index: 1;
+		}
+	}
+}
+
+.sliding-panel {
+	&__content {
+		.accounts-management {
+			&__content {
+				margin-top: -40px;
+				padding: 0;
+			}
+
+			&__content-buttons {
+				padding: 0;
+			}
+		}
+	}
+}
+
 .accounts-management {
 	&__page {
 		.accounts-management {
 			&__content {
 				padding: 0 20px 0;
-			}
-
-			&__content-title {
-				background-color: #fff;
-				box-shadow: 0 10px 15px 10px #fff;
-				padding: 20px 0 0;
-				margin: 0 0 30px;
-				position: sticky;
-				top: 0;
-				z-index: 10;
-			}
-
-			&__content-buttons {
-				background-color: #fff;
-				box-shadow: 0 -10px 15px 10px #fff;
-				position: sticky;
-				margin: 30px 0 0;
-				padding: 0 0 30px;
-				bottom: 0;
-				z-index: 10;
 			}
 		}
 	}
@@ -36,7 +56,6 @@
 		width: 100%;
 
 		&-title {
-			margin-top: -15px;
 			margin-bottom: 20px;
 		}
 
