--- a/src/popup/components/SlidingPanel/style.scss
+++ b/src/popup/components/SlidingPanel/style.scss
@@ -57,12 +57,14 @@
         overflow-y: scroll;
 
         &-header {
-            background: $windowBg;
             display: flex;
             align-items: center;
             justify-content: flex-end;
             padding: 16px 0 0;
             width: 100%;
+            position: sticky;
+            z-index: 10;
+            top: 0;
         }
     }
 }
